# ProducerConsumer-Problem-Multithreading

./: README.md
Java Code/: pom.xml
Java Code/src/code/: Customer.java  Farmer.java  Main.java  RabbitMQ.java  Serialization.java  ShopOwner.java  Worker.java
Rust Code/: Cargo.toml
Rust Code/src/: Amiquip.rs  Customer.rs  Farmer.rs  ShopOwner.rs  Worker.rs  main.rs
